--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
