--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.69.2"
+    "react-top-loading-bar": "^2.3.1",
+    "sass": "^1.69.5",
+    "web-vitals": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
